# amplifier-module-provider-litellm

./: .gitignore  README.md  pyproject.toml
amplifier_module_provider_litellm/: __init__.py  module.py  provider.py
src/amplifier_module_provider_litellm/: __init__.py  module.py  provider.py
tests/: conftest.py  test_cost_tier.py  test_error_translation.py  test_module.py  test_provider.py  test_tool_repair.py
