[project]
name = "amplifier-module-provider-litellm"
version = "0.1.0"
description = "Amplifier provider module using litellm — supports 100+ LLM providers via environment variables"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brian Krabach", email = "amplifier@microsoft.com" },
]
dependencies = [
    "amplifier-core>=1.0.0",
    "litellm>=1.50.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_litellm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
